# custom_bsp_example

./: README.md
custom_bsp/devicetree/: customer_board.dts
helloworld/: CMakeLists.txt  helloworld.c  sdk.config
helloworld/custom_bsp/: CMakeLists.txt
helloworld/custom_bsp/bsp/drivers/: mcp9808.c  mcp9808.h
helloworld/custom_bsp/devicetree/: customer_board.dts
helloworld/custom_bsp/kconfig/: board.kconfig  drivers.kconfig
